syntax = "proto3";

package rivet.backend.pkg.nsfw.image_score;

import "resources/legacy/proto/common.proto";

message Request {
	repeated string image_urls = 1;
}

message Response {
	message ImageScore {
		string url = 1;
		float score = 2;
	}

	repeated ImageScore scores = 1;
}
